--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1253,6 +1253,7 @@ body {
       font-size: 14px;
       letter-spacing: normal;
       color: #fff;
+      font-family: "SUITE-Regular", sans-serif;
 
       @include mobile {
         font-size: 11px;
