--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -178,7 +178,7 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background-color: #e5631c;
+  background-color: #e43d67;
   // background-color: #ff5885;
   clip-path: circle(0% at 50% 50%);
   transition: 0.5s;
@@ -186,7 +186,7 @@
   &::before {
     content: "";
     display: block;
-    background: url("../images/gnb_image2.png") no-repeat;
+    background: url("../images/gnb_image.png") no-repeat;
     background-size: 100%;
     width: 440px;
     height: 100%;
