--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -47,11 +47,15 @@ body {
   word-wrap: break-word;
   line-height: 1.1;
   letter-spacing: -0.02em;
-  font-family: "SUITE-Regular", sans-serif;
+  font-family: "poppins", sans-serif;
   display: block;
 
   @include mobile {
     font-size: 8.5vw;
+  }
+
+  @include minDevice {
+    font-size: 13vw;
   }
 }
 
@@ -285,11 +289,14 @@ body {
     position: absolute;
     right: 0;
     left: 0;
-    top: calc(100% - min(1162px, 100vw) * 262 / 2678 * 0.5 + -41.10829px);
     top: 87%;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include minDevice {
+      top: 92%;
+    }
 
     .title {
       font-family: "Poppins", sans-serif;
@@ -303,17 +310,17 @@ body {
       @include mobile {
         max-width: none;
       }
+
+
     }
 
     .sub-title {
       transform: translateY(0%);
-      padding-top: 20px;
       color: #fff;
       font-size: 39px;
       opacity: 1;
 
       @include mobile {
-        padding-top: 16px;
         font-size: 16px;
       }
     }
@@ -393,6 +400,10 @@ body {
     width: 792px;
   }
 
+  @include minDevice {
+    padding-top: 0;
+  }
+
   .marquee {
     display: flex;
 
@@ -418,6 +429,11 @@ body {
     max-width: calc(640px - 42px);
     margin-left: calc(50vw - min(100vw, 640px)/ 2);
     padding: 113px 0;
+  }
+
+  @include minDevice {
+    padding: 0;
+    padding-top: 50px;
   }
 
   .background {
@@ -464,6 +480,10 @@ body {
     margin-left: auto;
     clip-path: polygon(100% 100%, 0% 100%, 0.00% 36.67%, 2.00% 36.00%, 4.00% 34.06%, 6.00% 31.05%, 8.00% 27.30%, 10.00% 23.20%, 12.00% 19.19%, 14.00% 15.68%, 16.00% 13.06%, 18.00% 11.59%, 20.00% 11.43%, 22.00% 12.61%, 24.00% 14.99%, 26.00% 18.32%, 28.00% 22.25%, 30.00% 26.37%, 32.00% 30.24%, 34.00% 33.45%, 36.00% 35.66%, 38.00% 36.63%, 40.00% 36.27%, 42.00% 34.61%, 44.00% 31.83%, 46.00% 28.22%, 48.00% 24.16%, 50.00% 20.09%, 52.00% 16.43%, 54.00% 13.57%, 56.00% 11.81%, 58.00% 11.35%, 60.00% 12.22%, 62.00% 14.34%, 64.00% 17.48%, 66.00% 21.31%, 68.00% 25.43%, 70.00% 29.39%, 72.00% 32.79%, 74.00% 35.25%, 76.00% 36.52%, 78.00% 36.47%, 80.00% 35.10%, 82.00% 32.55%, 84.00% 29.10%, 86.00% 25.11%, 88.00% 21.00%, 90.00% 17.21%, 92.00% 14.14%, 94.00% 12.11%, 96.00% 11.34%, 98.00% 11.91%, 100.00% 13.75%);
     transition: 1s;
+
+    @include minDevice {
+      height: 300px;
+    }
 
     &.on {
       clip-path:
@@ -546,6 +566,10 @@ body {
     margin-top: 30px;
   }
 
+  @include minDevice {
+    margin-top: 160px;
+  }
+
   .headline {
     top: 0;
     right: 0px;
@@ -569,6 +593,10 @@ body {
   .text-box {
     z-index: 1;
     flex-direction: column;
+
+    @include minDevice {
+      padding-top: 50px;
+    }
 
     .title {
       margin-left: 60px;
@@ -623,6 +651,13 @@ body {
 
               @include minDevice {
                 display: block;
+              }
+            }
+
+            &:nth-child(3) {
+
+              @include minDevice {
+                display: none;
               }
             }
           }
@@ -830,6 +865,8 @@ body {
 
         @include minDevice {
           width: 35vw;
+          display: flex;
+          justify-content: center;
         }
       }
     }
@@ -869,7 +906,10 @@ body {
 
       .link-title {
         min-width: 175px;
-        // min-width: 110px;
+
+        @include minDevice {
+          min-width: 105px;
+        }
 
         &:after {
           bottom: 10px;
@@ -900,6 +940,10 @@ body {
   .link-headline {
     padding-top: 10px;
     padding-left: 50px;
+
+    @include minDevice {
+      padding-left: 20px;
+    }
 
     .link-title {
       font-size: 20px;
