샤넬로 브랜드 교체

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ fieldset {
 .loading p {
   font-size: 100px;
   font-weight: 900;
-  letter-spacing: -3px;
+  letter-spacing: -0.02em;
   color: #fff;
 }
 @media screen and (max-width: 960px) {
