--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -45,7 +45,7 @@
   p {
     font-size: 100px;
     font-weight: 900;
-    letter-spacing: -3px;
+    letter-spacing: -0.02em;
     color: #fff;
 
     @include mobile {
