--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -41,14 +41,20 @@ body {
 }
 
 .title {
+  display: block;
   font-weight: 900;
-  font-size: 13.5vw;
+  font-size: 13vw;
   color: #fff;
   word-wrap: break-word;
   line-height: 1.1;
   letter-spacing: -0.02em;
   font-family: "poppins", sans-serif;
-  display: block;
+
+
+  // 1440이상을 꾸미는것이다.
+  @media screen and (min-width: 1440px) {
+    font-size: 195px;
+  }
 
   @include mobile {
     font-size: 8.5vw;
@@ -283,13 +289,17 @@ body {
 
   .image-box {
     overflow: hidden;
+
+    img {
+      width: 100%;
+    }
   }
 
   .title-box {
     position: absolute;
     right: 0;
     left: 0;
-    top: 87%;
+    top: calc(100% - min(1440px, 100vw)*402/2678*.5 + 4.89171px);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -329,7 +339,7 @@ body {
 
 
 .section-concept {
-  margin-top: 300px;
+  margin-top: 250px;
 
   @include mobile {
     margin-top: 100px;
