--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -143,7 +143,7 @@
         }
 
         .sns-item {
-          #instagram {
+          .instagram {
             &:before {
               content: "";
               display: block;
@@ -171,7 +171,7 @@
             }
           }
 
-          #twitter {
+          .twitter {
             &:before {
               content: "";
               display: block;
