--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -350,7 +350,7 @@
           gap: 32px;
 
           .sns-item {
-            #instagram {
+            .instagram {
               &:before {
                 content: "";
                 display: block;
@@ -372,7 +372,7 @@
               }
             }
 
-            #twitter {
+            .twitter {
               &:before {
                 content: "";
                 display: block;
