--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -184,39 +184,11 @@
     }
 
     &_link {
-      overflow: hidden;
       display: block;
-      position: relative;
       height: 31px;
       line-height: 31px;
 
-      .text_top,
-      .text_bottom {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        transition: 0.3s;
-      }
-
-      .text_top {
-        top: 0;
-        left: 0;
-      }
-
-      .text_bottom {
-        top: 100%;
-        left: 0;
-      }
-
-      &:hover {
-        .text_top {
-          top: -100%;
-        }
-
-        .text_bottom {
-          top: 0;
-        }
-      }
+      @include hidden_text_transition;
     }
 
     .sub {
@@ -255,7 +227,7 @@
     gap: 88px;
 
     @include mobile {
-      gap: 0px;
+      gap: 0;
     }
 
     .social_box {
@@ -335,48 +307,18 @@
         }
 
         @include minDevice {
-          gap: 0px;
+          gap: 0;
         }
       }
 
       &_link {
-        overflow: hidden;
         display: block;
-        position: relative;
         height: 15px;
         white-space: nowrap;
         line-height: 1;
-
+        @include hidden_text_transition;
         @include minDevice {
           width: 50%;
-        }
-
-        .text_top,
-        .text_bottom {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          transition: 0.3s;
-        }
-
-        .text_top {
-          top: 0;
-          left: 0;
-        }
-
-        .text_bottom {
-          top: 100%;
-          left: 0;
-        }
-
-        &:hover {
-          .text_top {
-            top: -100%;
-          }
-
-          .text_bottom {
-            top: 0;
-          }
         }
       }
     }
