--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -34,14 +34,10 @@
   letter-spacing: -0.02em;
   line-height: 1.1;
   @media screen and (min-width: 1440px) {
-    font-size: 195px;
+    font-size: 170px;
   }
   @include mobile {
     font-size: 8.5vw;
-  }
-
-  @include minDevice {
-    font-size: 13vw;
   }
 }
 
@@ -245,10 +241,6 @@
     flex-direction: column;
     align-items: center;
     padding: 0 20px;
-
-    @include minDevice {
-      top: 92%;
-    }
 
     .title {
       font-family: "Poppins", sans-serif;
@@ -457,10 +449,6 @@
   @include mobile {
     width: 792px;
     padding-top: 100px;
-  }
-
-  @include minDevice {
-    padding-top: 0;
   }
 
   .marquee {
@@ -695,10 +683,6 @@
     margin-top: 30px;
   }
 
-  @include minDevice {
-    margin-top: 160px;
-  }
-
   .headline {
     top: 0;
     right: 0;
@@ -761,16 +745,6 @@
 
           @include mobile {
             display: block;
-          }
-
-          @include minDevice {
-            display: block;
-          }
-        }
-
-        &:nth-child(3) {
-          @include minDevice {
-            display: none;
           }
         }
       }
@@ -1024,19 +998,17 @@
 
     .image_box {
       position: relative;
-      top: 8.7%;
-      top: 15%;
+      top: 80px;
       left: 50%;
       z-index: 1;
+      width: 193px;
+      padding-bottom: 100%;
       transform: translateX(-50%);
-      width: 242px;
-      padding-bottom: calc((160 / 185) * 100%);
 
       @include mobile {
         top: 7%;
-        width: 110px;
-        bottom: 148px;
-        padding-bottom: calc((279 / 560) * 100%);
+        width: 121px;
+        padding-bottom: 277px;
       }
 
       img {
