스크린 리더기 구조 변경

--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1062,6 +1062,10 @@
       font-weight: 900;
       font-size: 18px;
 
+      span {
+        display: block;
+      }
+
       @include mobile {
         font-size: 12px;
       }
