--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,10 +310,9 @@ fieldset {
 }
 
 .gnb {
-  position: fixed;
+  display: none;
   top: 0;
   z-index: 2;
-  display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -336,6 +335,8 @@ fieldset {
   }
 }
 .gnb.is_active {
+  position: fixed;
+  display: flex;
   -webkit-clip-path: circle(100% at 50% 50%);
           clip-path: circle(100% at 50% 50%);
 }
@@ -1558,6 +1559,9 @@ fieldset {
   z-index: 1;
   font-weight: 900;
   font-size: 18px;
+}
+.section_products .product_name span {
+  display: block;
 }
 @media screen and (max-width: 960px) {
   .section_products .product_name {
