--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -127,10 +127,9 @@
 }
 
 .gnb {
-  position: fixed;
+  display: none;
   top: 0;
   z-index: 2;
-  display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -152,6 +151,8 @@
   }
 
   &.is_active {
+    position: fixed;
+    display: flex;
     clip-path: circle(100% at 50% 50%);
   }
 
