--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -36,7 +36,7 @@
       }
     }
 
-    &[aria-selected="true"] {
+    &[aria-pressed="true"] {
       .menu_text {
         visibility: hidden;
       }
