크로스브라우징 맞추기

--- a/assets/scss/util/_mixin.scss
+++ b/assets/scss/util/_mixin.scss
@@ -22,6 +22,14 @@ $mobile: 960px;
   }
 }
 
+$minDevice: 700px;
+@mixin minDevice {
+  // 700 이하를 꾸미는거다.
+  @media screen and (max-width: $minDevice) {
+    @content;
+  }
+}
+
 @mixin ellipse($line: 1) {
   overflow: hidden;
   text-overflow: ellipsis;
