--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -173,6 +173,10 @@
       display: flex;
       flex-direction: column;
       gap: 28px;
+
+      @include minDevice {
+        gap: 20px;
+      }
     }
 
     &_item {
@@ -181,6 +185,10 @@
 
       @include mobile {
         font-size: 40px;
+      }
+
+      @include minDevice {
+        font-size: 30px;
       }
     }
 
@@ -239,6 +247,10 @@
       @include mobile {
         flex-direction: row;
         padding: 40px 0 30px 0;
+      }
+
+      @include minDevice {
+        padding-top: 10px;
       }
 
       .title {
