--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,11 @@ fieldset {
   flex-direction: column;
   gap: 28px;
 }
+@media screen and (max-width: 700px) {
+  .gnb .nav_list {
+    gap: 20px;
+  }
+}
 .gnb .nav_item {
   font-size: 30px;
   color: #fff;
@@ -366,6 +371,11 @@ fieldset {
 @media screen and (max-width: 960px) {
   .gnb .nav_item {
     font-size: 40px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .gnb .nav_item {
+    font-size: 30px;
   }
 }
 .gnb .nav_link {
@@ -442,6 +452,11 @@ fieldset {
   .gnb .social_contact_area .social_box {
     flex-direction: row;
     padding: 40px 0 30px 0;
+  }
+}
+@media screen and (max-width: 700px) {
+  .gnb .social_contact_area .social_box {
+    padding-top: 10px;
   }
 }
 .gnb .social_contact_area .social_box .title {
