크로스브라우징 맞추기

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -561,6 +561,9 @@ fieldset {
     padding: 80px 0 24px;
   }
 }
+.footer.is_hidden {
+  height: 0;
+}
 .footer_inner {
   width: calc(100vw - 240px);
   max-width: 1400px;
