--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -188,7 +188,7 @@
       }
 
       @include minDevice {
-        font-size: 30px;
+        font-size: 25px;
       }
     }
 
@@ -251,6 +251,7 @@
 
       @include minDevice {
         padding-top: 10px;
+        padding-bottom: 20px;
       }
 
       .title {
