--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,9 +204,9 @@ fieldset {
 .header {
   overflow: hidden;
   position: fixed;
-  top: 48px;
+  top: 0;
   left: 0;
-  right: 65px;
+  right: 0;
   z-index: 3;
   background-color: transparent;
   cursor: pointer;
@@ -225,6 +225,7 @@ fieldset {
   justify-content: flex-end;
   gap: 20px;
   width: 100%;
+  padding: 28px 32px;
   cursor: pointer;
 }
 .header .menu_button:hover .menu_text_top {
