크로스브라우징 맞추기

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -137,6 +137,8 @@
   background-color: #e43d67;
   clip-path: circle(0% at 50% 50%);
   transition: 0.5s;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 
   &::before {
     display: block;
