--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,6 +321,8 @@ fieldset {
   -webkit-clip-path: circle(0% at 50% 50%);
           clip-path: circle(0% at 50% 50%);
   transition: 0.5s;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 .gnb::before {
   display: block;
