--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -137,8 +137,7 @@
   background-color: #e43d67;
   clip-path: circle(0% at 50% 50%);
   transition: 0.5s;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  height: calc(var(--vh, 1vh) * 100);
 
   &::before {
     display: block;
