크로스브라우징 맞추기

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,9 @@ fieldset {
   -webkit-clip-path: circle(100% at 50% 50%);
           clip-path: circle(100% at 50% 50%);
 }
+.gnb.min_device {
+  padding-top: 0;
+}
 .gnb .nav {
   display: flex;
   align-items: flex-end;
