--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -157,6 +157,9 @@
     display: flex;
     clip-path: circle(100% at 50% 50%);
   }
+  &.min_device {
+    padding-top: 0;
+  }
 
   .nav {
     display: flex;
