크로스브라우징 맞추기

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,11 @@ fieldset {
 .gnb.min_device {
   padding-top: 0;
 }
+@media screen and (max-width: 425px) {
+  .gnb.min_device {
+    padding-top: 0;
+  }
+}
 .gnb .nav {
   display: flex;
   align-items: flex-end;
