--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,14 +342,6 @@ fieldset {
   -webkit-clip-path: circle(100% at 50% 50%);
           clip-path: circle(100% at 50% 50%);
 }
-.gnb.min_device {
-  padding-top: 0;
-}
-@media screen and (max-width: 425px) {
-  .gnb.min_device {
-    padding-top: 0;
-  }
-}
 .gnb .nav {
   display: flex;
   align-items: flex-end;
@@ -362,6 +354,14 @@ fieldset {
     height: 100%;
     margin: 0;
     padding: 63.5px 32px;
+  }
+}
+.gnb .nav.min_device {
+  padding-top: 0;
+}
+@media screen and (max-width: 425px) {
+  .gnb .nav.min_device {
+    padding-top: 0;
   }
 }
 .gnb .nav_list {
