--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -43,6 +43,7 @@
 
 .description_wrap {
   display: flex;
+  align-items: center;
   position: relative;
   z-index: 1;
   padding-top: 40px;
@@ -63,6 +64,7 @@
 
     .description {
       display: block;
+      width: 100%;
       padding: 0;
       font-size: 17px;
       font-weight: 900;
@@ -289,6 +291,12 @@
     right: 0;
   }
 
+  .description_wrap {
+    font-size: 42px;
+  }
+  .description {
+    width: 100%;
+  }
   .image_box {
     position: relative;
     max-width: 920px;
@@ -749,6 +757,9 @@
       }
     }
 
+    .link_more {
+      margin-left: 0;
+    }
     .link_text {
       width: 250px;
 
